--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ development:
   adapter: mysql2
   database: library_development
   user: root
-  password: Password00
+  password: ACL2013
   pool: 5
   timeout: 5000
 
